fixing nav bar on mobiles

--- a/index.html
+++ b/index.html
@@ -14,11 +14,40 @@
     </div>
     <nav class="floating-menu">
         <ul class="menu-items">
-            <li><a href="#personal" class="menu-link" data-section="personal">About</a></li>
-            <li><a href="#experience" class="menu-link" data-section="experience">Experience</a></li>
-            <li><a href="#education" class="menu-link" data-section="education">Education</a></li>
-            <li><a href="#thoughts" class="menu-link" data-section="thoughts">Thoughts</a></li>
-            <li><a href="#projects" class="menu-link" data-section="projects">Projects</a></li>
+            <li><a href="#personal" class="menu-link" data-section="personal">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                    <circle cx="12" cy="7" r="4"></circle>
+                </svg>
+                <span class="menu-text">About</span>
+            </a></li>
+            <li><a href="#experience" class="menu-link" data-section="experience">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="2" y="3" width="20" height="14" rx="2" ry="2"></rect>
+                    <line x1="8" y1="21" x2="16" y2="21"></line>
+                    <line x1="12" y1="17" x2="12" y2="21"></line>
+                </svg>
+                <span class="menu-text">Experience</span>
+            </a></li>
+            <li><a href="#education" class="menu-link" data-section="education">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M22 10v6M2 10l10-5 10 5-10 5z"></path>
+                    <path d="M6 12v5c3 3 9 3 12 0v-5"></path>
+                </svg>
+                <span class="menu-text">Education</span>
+            </a></li>
+            <li><a href="#thoughts" class="menu-link" data-section="thoughts">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
+                </svg>
+                <span class="menu-text">Thoughts</span>
+            </a></li>
+            <li><a href="#projects" class="menu-link" data-section="projects">
+                <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path>
+                </svg>
+                <span class="menu-text">Projects</span>
+            </a></li>
         </ul>
     </nav>
     <div class="container"></div>
