--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                 </svg>
                 <span class="menu-text">Projects</span>
             </a></li>
-			 <li><a href="#thoughts" class="menu-link" data-section="thoughts">
+			 <!-- <li><a href="#thoughts" class="menu-link" data-section="thoughts">
                 <svg class="menu-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
                 </svg>
                 <span class="menu-text">Thoughts</span>
-            </a></li>
+            </a></li> -->
         </ul>
     </nav>
     <div class="container"></div>
